<resources>
    <string name="app_name">ProjectX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email_nickname">Email/Nickname</string>
    <string name="loginTextView">Login</string>
    <string name="buttonLogin">Login</string>
    <string name="switch_to_register">Create new Profile</string>
    <string name="text_switch_to_register">No profile created yet? Create a new profile</string>
    <string name="birthdate">Birthdate</string>
    <string name="password">Password</string>
    <string name="about_me">About me...</string>
    <string name="picture">Picture...</string>
    <string name="back_to_login">Back to login</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="email">Email</string>
    <string name="last_name">Last name: </string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name: </string>
    <string name="nickname">Nickname</string>
    <string name="invalid_login">Invalid email password combination</string>
    <string name="party_name">Party name</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="profile_picture">Profile picture</string>
    <string name="tab_to_edit">Tab to edit</string>
    <string name="guestList">Guestlist</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to the messaging service</string>
    <string name="fcm_message">FCM Message</string>
</resources>